everything more or less works right now with the exception of stuff in todo.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,14 @@
                     </div>
                     {% if request.user and request.user.is_authenticated %}
                     <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
+                        <a href="{{ url_for('list_services') }}"
+                           class="text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 {% if request.url.path == '/fruit-types' %}border-indigo-500{% else %}border-transparent{% endif %}">
+                            Services
+                        </a>
+                        <a href="{{ url_for('list_owners') }}"
+                           class="text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 {% if request.url.path == '/fruit-types' %}border-indigo-500{% else %}border-transparent{% endif %}">
+                            Owners
+                        </a>
                         <a href="{{ url_for('list_fruits') }}"
                            class="text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 {% if request.url.path == '/fruits' %}border-indigo-500{% else %}border-transparent{% endif %}">
                             Fruits
