--- a/app/templates/fruits.html
+++ b/app/templates/fruits.html
@@ -37,17 +37,6 @@
                         </select>
                     </div>
                     <div>
-                        <label for="country" class="block text-sm font-medium text-gray-700">Country</label>
-                        <select id="country" name="country" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md">
-                            <option value="">All Countries</option>
-                            {% for country in countries %}
-                            <option value="{{ country }}" {% if selected_country == country %}selected{% endif %}>
-                                {{ country }}
-                            </option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <div>
                         <label for="search" class="block text-sm font-medium text-gray-700">Search</label>
                         <input type="text" name="search" id="search" 
                                class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md"
@@ -73,10 +62,13 @@
                                         Type
                                     </th>
                                     <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                        Country
+                                        Match_Type
                                     </th>
                                     <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                        Date Picked
+                                        Match_Pattern
+                                    </th>
+                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                        Date Added
                                     </th>
                                     <th scope="col" class="relative px-6 py-3">
                                         <span class="sr-only">Actions</span>
@@ -97,7 +89,10 @@
                                         </span>
                                     </td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                                        {{ fruit.country_of_origin }}
+                                        {{ fruit.match_type }}
+                                    </td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                                        {{ fruit.match_regex }}
                                     </td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
                                         {{ fruit.date_picked.strftime('%Y-%m-%d') }}
